implementacion de imagenes, foraneas  y estilos

--- a/asp_presentaciones/Pages/Index.cshtml
+++ b/asp_presentaciones/Pages/Index.cshtml
@@ -47,9 +47,13 @@
 else
 {
     <div class="text-center">
-        <h1 class="display-4">
+        <h4 class="display-4">
             Bienvenido
-        </h1>
+            
+        </h4>
+        <img src="/Imagenes/hotel.jpeg"
+             alt="Hotel representativo"
+             style="max-width: 400px; height: auto; border: 2px solid #ccc; border-radius: 10px;" />
 
         <form method="POST">
             <input type="submit"
