--- a/asp_presentaciones/wwwroot/css/site.css
+++ b/asp_presentaciones/wwwroot/css/site.css
@@ -1,23 +1,23 @@
 a.navbar-brand {
     white-space: normal;
     text-align: center;
-    word-break: break-all;
+    word-break: break-word;
 }
 
 a {
-    color: #0366d6;
+    color: #8b5e3c; /* Marrón suave */
 }
 
 .btn-primary {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #a47148; /* Terracota */
+    border-color: #8b5e3c;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #1b6ec2;
-    border-color: #1861ac;
+    background-color: #a47148; /* Terracota */
+    border-color: #8b5e3c;
 }
 
 html {
@@ -31,11 +31,11 @@ html {
 }
 
 .border-top {
-    border-top: 1px solid #e5e5e5;
+    border-top: 1px solid #d9cbb3; /* Arena claro */
 }
 
 .border-bottom {
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid #d9cbb3;
 }
 
 .box-shadow {
@@ -45,6 +45,9 @@ html {
 button.accept-policy {
     font-size: 1rem;
     line-height: inherit;
+    background-color: #c5bfa5; /* Beige claro */
+    color: #4e3b2c;
+    border: none;
 }
 
 html {
@@ -54,6 +57,8 @@ html {
 
 body {
     margin-bottom: 60px;
+    background-color: #f5f1e7; /* Fondo general suave */
+    color: #3e342d; /* Texto elegante */
 }
 
 .footer {
@@ -62,16 +67,20 @@ body {
     width: 100%;
     white-space: nowrap;
     line-height: 60px;
+    background-color: #e5d7c0;
+    color: #4e3b2c;
 }
 
 .card_index {
-    background-color: blue;
+    background-color: #c4a484; /* Marrón claro */
 }
 
 /* Screens --------------------- */
 .tb_data {
     width: 100%;
     border-radius: 10px;
+    background-color: #fdfaf4;
+    border: 1px solid #e0d4c2;
 }
 
 .cts_forms {
@@ -107,7 +116,6 @@ body {
     display: inline-block;
 }
 
-
 .popup {
     position: fixed;
     width: 100%;
@@ -130,7 +138,8 @@ body {
     max-width: 500px;
     height: 440px;
     margin: auto;
-    background: white;
+    background: #fffdf8;
+    border: 1px solid #d9cbb3;
 }
 
 .pp_del_inner, .pp_ms_inner {
@@ -143,5 +152,6 @@ body {
     max-width: 500px;
     height: 200px;
     margin: auto;
-    background: white;
+    background: #fffdf8;
+    border: 1px solid #d9cbb3;
 }
